prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/invalid_float_2.diag.txt
ERROR: malformed number
testData/diagnostics/invalid_float_2.nut:1:8

println(1e4......)
        ^--


